--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,13 @@ dependencies:
   flutter:
     sdk: flutter
 
+  core:
+    path: packages/core
+  movie:
+    path: packages/movie
+  dashboard:
+    path: packages/dashboard
+
   cupertino_icons: ^1.0.8
 
   provider: ^6.0.5
