--- a/packages/dashboard/pubspec.yaml
+++ b/packages/dashboard/pubspec.yaml
@@ -14,8 +14,17 @@ dependencies:
 
   movie:
     path: ../movie
+  core:
+    path: ../core
 
   get_it: ^7.6.0
+  #Mobx part
+  mobx: ^2.1.4
+  flutter_mobx: ^2.0.6+5
+  mobx_codegen: ^2.1.1
+  build_runner: ^2.3.3
+
+  gap: ^3.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
