--- a/packages/core/pubspec.yaml
+++ b/packages/core/pubspec.yaml
@@ -13,6 +13,13 @@ dependencies:
 
   dio: ^5.3.3
 
+  #Mobx part
+  mobx: ^2.1.4
+  flutter_mobx: ^2.0.6+5
+  mobx_codegen: ^2.1.1
+  build_runner: ^2.3.3
+  shimmer: ^3.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
