--- a/packages/movie/pubspec.yaml
+++ b/packages/movie/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
 
   json_serializable: ^6.6.1
   json_annotation: ^4.8.1
-
+  gap: ^3.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
