movie detail started

--- a/packages/movie/pubspec.yaml
+++ b/packages/movie/pubspec.yaml
@@ -21,6 +21,11 @@ dependencies:
   json_serializable: ^6.6.1
   json_annotation: ^4.8.1
   gap: ^3.0.0
+  #Mobx part
+  mobx: ^2.1.4
+  flutter_mobx: ^2.0.6+5
+  mobx_codegen: ^2.1.1
+  build_runner: ^2.3.3
 
 dev_dependencies:
   flutter_test:
