--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -11,7 +11,7 @@ analyzer:
   errors:
     constant_identifier_names: ignore
     library_private_types_in_public_api: ignore
-    non_constant_identifier_names: ignore ignore ignore ignore
+    non_constant_identifier_names: ignore
 include: package:flutter_lints/flutter.yaml
 
 linter:
