--- a/packages/core/pubspec.yaml
+++ b/packages/core/pubspec.yaml
@@ -2,6 +2,7 @@ name: core
 description: "A new Flutter package project."
 version: 0.0.1
 homepage:
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 environment:
   sdk: ^3.6.1
@@ -19,6 +20,10 @@ dependencies:
   mobx_codegen: ^2.1.1
   build_runner: ^2.3.3
   shimmer: ^3.0.0
+
+  get_it: ^7.6.0
+  project_x_movie_mobile:
+    path: ../../
 
 dev_dependencies:
   flutter_test:
