--- a/packages/dashboard/pubspec.yaml
+++ b/packages/dashboard/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
     path: ../genre
   core:
     path: ../core
+  search:
+    path: ../search
 
   get_it: ^7.6.0
   #Mobx part
@@ -28,6 +30,7 @@ dependencies:
   flutter_mobx: ^2.0.6+5
   mobx_codegen: ^2.1.1
   build_runner: ^2.3.3
+  stylish_bottom_bar: ^1.1.1
 
   gap: ^3.0.0
   http: ^1.3.0
