--- a/packages/movie/pubspec.yaml
+++ b/packages/movie/pubspec.yaml
@@ -28,8 +28,12 @@ dependencies:
   build_runner: ^2.3.3
   get_it: ^7.6.0
 
+  rate: ^0.0.1
+  fluttertoast: ^8.2.4
+
   project_x_movie_mobile:
     path: ../../
+  intl: ^0.20.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
